--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ font-family: 'Poppins', sans-serif;
 }
 
 :root {
-  --primary-color: blue;
+  --primary-color: rgba(135, 206, 235, 0.7);
   --purple: rgb(61, 25, 91);
-  --aqua: rgb(0, 255, 135);
+  --turqoise: rgb(0, 255, 135);
   --gradient: linear-gradient(90deg, rgba(0, 255, 135, 1) 0%, rgba(61, 25, 91, 1) 100%);
   --p-1: 1rem;
 }
@@ -25,6 +25,11 @@ body {
   float: left;
 }
 
+.container--body {
+  padding-top: 1rem;
+  width: 55%;
+}
+
 .box {
   background-color: var(--primary-color);
   width: 80%;
@@ -38,6 +43,7 @@ body {
 header {
   background: var(--gradient);
   padding-bottom: var(--p-1);
+  margin-bottom: 0;
   min-height: 30vh;
 }
 
@@ -52,11 +58,9 @@ header {
 }
 
 main {
-  margin: 0 auto;
-  background-color: rgb(240, 255, 255, 1);
+  background-color: rgba(135, 206, 235, 0.7);
   height: 80vh;
-  padding: var(--p-1);
-  border-radius: 5px;
+  margin-top: 0;
   width: 100%;
 }
 
@@ -70,10 +74,19 @@ main {
   }
 }
 
+/* .container--body {
+  width: 80%;
+} */
+
 footer {
-  height: 5vh;
+  height: 8vh;
   text-align: center;
-  margin: 0.2rem 0 1rem 0;
+  margin: 0;
+  background-color: var(--turqoise);
+  font-weight: 800;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title--h1 {
